use margin instead of padding at the bottom of topic-row to avoid the overflow of the yellow placeholder

--- a/scss/partials/_topics_columns.scss
+++ b/scss/partials/_topics_columns.scss
@@ -30,7 +30,8 @@ div.topics-columns {
 
       div.topic-row{
         height: auto;
-        padding: 0px 10px 22px 10px;
+        padding: 0px 10px 0px 10px;
+        margin-bottom: 22px;
         border-left: 4px solid transparent;
         border-right: 4px solid transparent;
 
